@@ -458,31 +458,53 @@ class PloneGenerator:
         notify(SiteManagerCreatedEvent(portal))
 
     def assignTitles(self, portal, out):
-        titles={'portal_actions':'Contains custom tabs and buttons',
-         'portal_membership':'Handles membership policies',
-         'portal_memberdata':'Handles the available properties on members',
-         'portal_undo':'Defines actions and functionality related to undo',
-         'portal_types':'Controls the available content types in your portal',
+        titles={
+         'acl_users':'User / Group storage and authentication settings',
+         'archetype_tool':'Archetypes specific settings',
+         'caching_policy_manager':'Settings related to proxy caching',
+         'content_type_registry':'MIME type settings',
+         'error_log':'Error and exceptions log viewer',
+         'kupu_library_tool':'Kupu Visual Editor settings',
+         'MailHost':'Mail server settings for outgoing mail',
+         'mimetypes_registry':'MIME types recognized by Plone',
          'plone_utils':'Various utility methods',
-         'portal_metadata':'Controls metadata like keywords, copyrights, etc',
-         'portal_migration':'Upgrades to newer Plone versions',
-         'portal_registration':'Handles registration of new users',
-         'portal_skins':'Controls skin behaviour (search order etc)',
-         'portal_syndication':'Generates RSS for folders',
-         'portal_workflow':'Contains workflow definitions for your portal',
-         'portal_url':'Methods to anchor you to the root of your Plone site',
-         'portal_discussion':'Controls how discussions are stored',
-         'portal_catalog':'Indexes all content in the site',
-         'portal_factory':'Responsible for the creation of content objects',
-         'portal_calendar':'Controls how events are shown',
-         'portal_quickinstaller':'Allows to install/uninstall products',
-         'portal_interface':'Allows to query object interfaces',
          'portal_actionicons':'Associates actions with icons',
+         'portal_actions':'Contains custom tabs and buttons',
+         'portal_atct':'Collection and image scales settings',
+         'portal_calendar':'Controls how events are shown',
+         'portal_catalog':'Indexes all content in the site',
+         'portal_controlpanel':'Registry of control panel screen',
+         'portal_css':'Registry of CSS files',
+         'portal_diff':'Settings for content version comparisions',
+         'portal_discussion':'Controls how discussions are stored',
+         'portal_factory':'Responsible for the creation of content objects',
+         'portal_form_controller':'Registration of form and validation chains',
          'portal_groupdata':'Handles properties on groups',
          'portal_groups':'Handles group related functionality',
-         'translation_service': 'Provides access to the translation machinery',
-         'mimetypes_registry': 'MIME types recognized by Plone',
+         'portal_interface':'Allows to query object interfaces',
+         'portal_javascripts':'Registry of JavaScript files',
+         'portal_kss':'Registry of Kinetic Style Sheets',
+         'portal_languages':'Language specific settings',
+         'portal_membership':'Handles membership policies',
+         'portal_memberdata':'Handles the available properties on members',
+         'portal_metadata':'Controls metadata like keywords, copyrights, etc',
+         'portal_migration':'Upgrades to newer Plone versions',
+         'portal_password_reset':'Handles password retention policy',
+         'portal_properties':'General settings registry',
+         'portal_quickinstaller':'Allows to install/uninstall products',
+         'portal_registration':'Handles registration of new users',
+         'portal_setup':'Add-on and configuration management',
+         'portal_skins':'Controls skin behaviour (search order etc)',
+         'portal_syndication':'Generates RSS for folders',
          'portal_transforms': 'Handles data conversion between MIME types',
+         'portal_types':'Controls the available content types in your portal',
+         'portal_undo':'Defines actions and functionality related to undo',
+         'portal_url':'Methods to anchor you to the root of your Plone site',
+         'portal_view_customizations':'Template customizations',
+         'portal_workflow':'Contains workflow definitions for your portal',
+         'reference_catalog':'Catalog of content references',
+         'translation_service':'Provides access to the translation machinery',
+         'uid_catalog':'Catalog of unique content identifiers',
          }
 
         for oid in portal.objectIds():
